# local_ai_app_gratis

./: README.md  pubspec.yaml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/local_ai_app_gratis/: pubspec.yaml
package/local_ai_app_gratis/example/: local_ai_app_gratis_example.dart
package/local_ai_app_gratis/lib/: local_ai_app_gratis.dart
package/local_ai_app_gratis/test/: local_ai_app_gratis_test.dart
package/local_ai_app_gratis_android/: pubspec.yaml
package/local_ai_app_gratis_android/lib/: local_ai_app_gratis_android.dart
package/local_ai_app_gratis_android/test/: local_ai_app_gratis_android_test.dart
package/local_ai_app_gratis_apis/: pubspec.yaml
package/local_ai_app_gratis_apis/example/: local_ai_app_gratis_apis_example.dart
package/local_ai_app_gratis_apis/lib/: local_ai_app_gratis_apis.dart
package/local_ai_app_gratis_apis/test/: local_ai_app_gratis_apis_test.dart
package/local_ai_app_gratis_cli/: pubspec.yaml
package/local_ai_app_gratis_cli/example/: local_ai_app_gratis_cli_example.dart
package/local_ai_app_gratis_cli/lib/: local_ai_app_gratis_cli.dart
package/local_ai_app_gratis_cli/test/: local_ai_app_gratis_cli_test.dart
package/local_ai_app_gratis_client/: pubspec.yaml
package/local_ai_app_gratis_client/example/: local_ai_app_gratis_client_example.dart
package/local_ai_app_gratis_client/lib/: local_ai_app_gratis_client.dart
package/local_ai_app_gratis_client/test/: local_ai_app_gratis_client_test.dart
package/local_ai_app_gratis_dart/: README.md  pubspec.yaml
package/local_ai_app_gratis_dart/example/: local_ai_app_gratis_dart_example.dart
package/local_ai_app_gratis_flutter/: pubspec.yaml
package/local_ai_app_gratis_fucshia/: pubspec.yaml
package/local_ai_app_gratis_ios/: pubspec.yaml
package/local_ai_app_gratis_linux/: pubspec.yaml
package/local_ai_app_gratis_macos/: pubspec.yaml
package/local_ai_app_gratis_server/: pubspec.yaml
package/local_ai_app_gratis_web/: pubspec.yaml
package/local_ai_app_gratis_windows/: pubspec.yaml
test/: local_ai_app_gratis_test.dart
(+19 files in other folders)
